table appends rows

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -69,7 +69,7 @@
           <th> Update</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody id="table_body">
         {{#each data as |d|}}
         <tr>
           <td class="text-success text-lg my-0 py-1">
