--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,7 +51,7 @@
         <input class="form-control form-control-dark text-xl w-100 ml-1" id="amount" name="amount" type="text"
           placeholder="Amount">
 
-        <select class="custom-select custom-select-lg form-control form-control-dark text-xl text-secondary ml-1" name="category" id="category">
+        <select class="custom-select custom-select-lg form-control form-control-dark text-xl text-secondary ml-1 h-100" name="category" id="category">
           <option selected hidden> Category </option>
           <option>in</option>
           <option>out</option>
@@ -181,7 +181,8 @@
     <script src="/js/collapse.js"></script>
     <script src="/js/dashchart.js"></script>
     <script src="/js/indexed_db.js"></script>
-    <script src="/js/save_record.js"></script>
+    <script src="/js/new_item.js"></script>
+    <script src="/js/table_up.js"></script>
 
 
 
