js folder reorganized

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -182,7 +182,7 @@
     <script src="/js/collapse/table_div.js"></script>
 
     {{!-- first indexed_db then new_item --}}
-    <script src="/js/db/indexed_db.js"></script>
+    <script src="/js/db/indexedDB.js"></script>
     <script src="/js/forms/new_item.js"></script>
     
     {{!-- chart or table then init at last --}}
