--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -119,6 +119,8 @@
           </div>
         </nav>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4 pt-5 mt-5">
+          <p class="text-light text-ubu" id="indexedDB_msg"></p>
+          <p id="indexedDB_error"></p>
           <div
             class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-5 pt-sm-2 pb-2  mt-5 mt-sm-2 mb-3 border-bottom border-success">
             <h2 class="text-ubu text-success mt-5 pt-5 mt-sm-2 pt-sm-2">
@@ -157,8 +159,8 @@
              </a>
 
           </h6>
-          <p id="indexedDB_error"></p>
           {{{body}}}
+          
 
         </main>
 
