add pwa to ref folder

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,13 +45,13 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         
-        <input class="form-control form-control-dark text-xl w-100 ml-1" id="description" name="description" type="text"
+        <input class="form-control form-control-dark form-control-sm w-100 ml-1" id="description" name="description" type="text"
           placeholder="Description">
         
-        <input class="form-control form-control-dark text-xl w-100 ml-1" id="amount" name="amount" type="text"
+        <input class="form-control form-control-dark form-control-sm w-100 ml-1" id="amount" name="amount" type="text"
           placeholder="Amount">
 
-        <select class="custom-select custom-select-lg form-control form-control-dark text-xl text-secondary ml-1 h-100" name="category" id="category">
+        <select class="custom-select custom-select-lg form-control form-control-dark form-control-sm text-secondary ml-1 h-100" name="category" id="category">
           <option selected hidden> Category </option>
           <option>in</option>
           <option>out</option>
