--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,7 +51,7 @@
         <input class="form-control form-control-dark form-control-sm w-100 ml-1" id="amount" name="amount" type="text"
           placeholder="Amount">
 
-        <select class="custom-select custom-select-lg form-control form-control-dark form-control-sm text-secondary ml-1 h-100" name="category" id="category">
+        <select class="custom-select custom-select-sm text-sm form-control form-control-dark form-control-sm text-secondary ml-1 py-0" name="category" id="category">
           <option selected hidden> Category </option>
           <option>in</option>
           <option>out</option>
